Readme JWT endpoint
